[project]
name = "ultimatevocalremovergui"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = [
    "altgraph==0.17.3",
    "audioread>=3.1.0",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "cryptography==3.4.6",
    "diffq>=0.2.4",
    "dora",
    "einops==0.6.0",
    "future==0.18.3",
    "julius==0.2.7",
    "kthread==0.2.3",
    "librosa==0.9.2",
    "llvmlite>=0.47.0",
    "matchering==2.0.6",
    "ml-collections==0.1.1",
    "natsort==8.2.0",
    "numpy>=2.4.6",
    "omegaconf==2.2.3",
    "onnx>=1.22.0",
    "onnx2pytorch>=0.5.3",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.27.0 ; sys_platform != 'darwin'",
    "opencv-python==4.6.0.66",
    "pillow>=12.2.0",
    "playsound3>=3.3.1",
    "psutil==5.9.4",
    "pydub==0.25.1",
    "pyglet==1.5.23",
    "pyperclip==1.8.2",
    "pyrubberband>0.3.0",
    "pysoundfile>=0.9.0.post1 ; sys_platform == 'darwin'",
    "pytorch-lightning==2.0.0",
    "pyyaml>=6.0.3",
    "resampy==0.4.2",
    "samplerate==0.1.0",
    "scipy>=1.17.1",
    "screeninfo==0.8.1",
    "soundfile; sys_platform != 'darwin'",
    "soundstretch==1.2",
    "torch>=2.2.2",
    "urllib3==1.26.12",
    "wget==3.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
dora = { git = "https://github.com/NathanEpstein/Dora" }

[dependency-groups]
dev = [
    "removestar>=1.5.2",
]
